--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -7,23 +7,23 @@
   <main>
     <% if (prods.length > 0) { %>
       <div class="grid">
-          <% prods.forEach(product => { %>
-            <article class="card product-item">
-                <header class="card__header">
-                    <h1 class="product__title"><%= product.title %></h1>
-                </header>
-                <div class="card__image">
-                    <img src="<%= product.imageUrl %>" alt="<%= product.title %> ">
-                </div>
-                <div class="card__content">
-                    <h2 class="product__price">$<%= product.price %> </h2>
-                    <p class="product__description"><%= product.description %> </p>
-                </div>
-                <div class="card__actions">
-                    <button class="btn">Add to Cart</button>
-                </div>
-            </article>
-          <% }) %>
+        <% prods.forEach(product => { %>
+          <article class="card product-item">
+            <header class="card__header">
+                <h1 class="product__title"><%= product.title %></h1>
+            </header>
+            <div class="card__image">
+                <img src="<%= product.imageUrl %>" alt="<%= product.title %> ">
+            </div>
+            <div class="card__content">
+                <h2 class="product__price">$<%= product.price %> </h2>
+                <p class="product__description"><%= product.description %> </p>
+            </div>
+            <div class="card__actions">
+              <%- include("../includes/add-to-cart.ejs", {product}) %>
+            </div>
+          </article>
+        <% }) %>
       </div>
     <% } else { %>
       <h2>No products found!</h2>
