--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -19,7 +19,7 @@
                         </div>
                         <div class="card__content">
                             <h2 class="product__price">$<%= product.price %></h2>
-                            <p class="product__description"><%= product.description %></p>
+                            <p class="product__description"><%= product.description.split(" ").filter((word, index) => index < 30).join(" ")%> <%= product.description.split(" ").length >= 30 ? "..." : "" %></p>
                         </div>
                         <div class="card__actions">
                             <a href="/products/<%= product._id %>" class="btn">Details</a>
