--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -8,50 +8,46 @@
 
     <main>
         <% if (errorMessage) { %>
-            <p class="user-message user-message--error"><%= errorMessage %></p>
+            <div class="user-message user-message--error"><%= errorMessage %></div>
         <% } %>
         <form class="login-form" action="/signup" method="POST" novalidate>
             <div class="form-control">
                 <label for="name">Name</label>
                 <input 
-                    class="<%= validationErrors?.find(e => e.param === "name") ? "invalid" : "" %>"
-                    type="name" 
+                    class="<%= validationErrors.find(e => e.param === 'name') ? 'invalid' : '' %>"
+                    type="text" 
                     name="name" 
                     id="name" 
-                    value="<%= oldInput.name %>"
-                >
+                    value="<%= oldInput.email %>">
             </div>
             <div class="form-control">
                 <label for="email">E-Mail</label>
                 <input 
-                    class="<%= validationErrors?.find(e => e.param === "email") ? "invalid" : "" %>"
+                    class="<%= validationErrors.find(e => e.param === 'email') ? 'invalid' : '' %>"
                     type="email" 
                     name="email" 
                     id="email" 
-                    value="<%= oldInput.email %>"
-                >
+                    value="<%= oldInput.email %>">
             </div>
             <div class="form-control">
                 <label for="password">Password</label>
                 <input 
-                    class="<%= validationErrors?.find(e => e.param === "password") ? "invalid" : "" %>"
+                    class="<%= validationErrors.find(e => e.param === 'password') ? 'invalid' : '' %>"
                     type="password" 
                     name="password" 
                     id="password" 
-                    value="<%= oldInput.password %>"
-                >
+                    value="<%= oldInput.password %>">
             </div>
             <div class="form-control">
                 <label for="confirmPassword">Confirm Password</label>
                 <input 
-                    class="<%= validationErrors?.find(e => e.param === "confirmPassword") ? "invalid" : "" %>"
+                    class="<%= validationErrors.find(e => e.param === 'confirmPassword') ? 'invalid' : '' %>"
                     type="password" 
                     name="confirmPassword" 
                     id="confirmPassword" 
-                    value="<%= oldInput.confirmPassword %>"
-                >
+                    value="<%= oldInput.confirmPassword %>">
             </div>
-            <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="btn" type="submit">Signup</button>
         </form>
     </main>
