--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -11,15 +11,15 @@
                 <% for (let product of prods) { %>
                     <article class="card product-item">
                         <header class="card__header">
-                            <h1 class="product__title"><%= product.title %></h1>
+                            <h2 class="product__title"><%= product.title %></h2>
                         </header>
                         <div class="card__image">
-                            <img src="<%= product.imageUrl %>"
+                            <img src="/<%= product.imageUrl %>"
                                 alt="<%= product.title %>">
                         </div>
                         <div class="card__content">
-                            <h2 class="product__price">$<%= product.price %></h2>
-                            <p class="product__description"><%= product.description.split(" ").filter((word, index) => index < 30).join(" ")%> <%= product.description.split(" ").length >= 30 ? "..." : "" %></p>
+                            <h3 class="product__price">$<%= product.price.toFixed(2); %></h3>
+                            <p class="product__description"><%= product.description.split(" ").filter((word, index) => index < 30).join(" ") %><%= product.description.split(" ").length > 30 ? "..." : "" %></p>
                         </div>
                         <div class="card__actions">
                             <a href="/products/<%= product._id %>" class="btn">Details</a>
