--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -11,18 +11,18 @@
                         <% for (let product of prods) { %>
                             <article class="card product-item">
                                 <header class="card__header">
-                                    <h1 class="product__title">
+                                    <h2 class="product__title">
                                         <%= product.title %>
-                                    </h1>
+                                    </h2>
                                 </header>
                                 <div class="card__image">
-                                    <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
+                                    <img src="/<%= product.imageUrl %>" alt="<%= product.title %>">
                                 </div>
                                 <div class="card__content">
-                                    <h2 class="product__price">$<%= product.price %>
-                                    </h2>
+                                    <h3 class="product__price">$<%= product.price.toFixed(2); %>
+                                    </h3>
                                     <p class="product__description">
-                                        <%= product.description.split(" ").filter((word, index) => index < 30).join(" ") %> <%= product.description.split(" ").length >= 30 ? "..." : "" %>
+                                        <%= product.description.split(" ").filter((word, index) => index < 30).join(" ") %><%= product.description.split(" ").length > 30 ? "..." : "" %>
                                     </p>
                                 </div>
                                 <div class="card__actions">
