Feat: Pagination for routes displaying products

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -247,6 +247,26 @@ form {
   background: rgb(255, 176, 176);
 }
 
+.pagination {
+  margin-top: 2rem;
+  text-align: center;
+}
+
+.pagination a {
+  margin: 0 0.5rem;
+  padding: 0.5rem;
+  border: 1px solid #00695c;
+  text-decoration: none;
+  color: #00695c;
+}
+
+.pagination a:hover,
+.pagination a:active,
+.pagination a.active {
+  background: #00695c;
+  color: white;
+}
+
 @media (min-width: 768px) {
   .main-header__nav {
     display: flex;
